--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
+    "fotorama": "^4.6.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.5",
@@ -29,7 +30,8 @@
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-optipng": "^5.1.1",
-    "imagemin-svgo": "^5.2.0"
+    "imagemin-svgo": "^5.2.0",
+    "jquery": "^3.2.1"
   },
   "dependencies": {
     "equalizecss": "^1.0.82",
